cmake_minimum_required(VERSION 3.24)
project(dataStructure)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(application)
add_subdirectory(linear)
add_subdirectory(chainLinear)
add_subdirectory(arrMatrix)
add_subdirectory(stack)
add_subdirectory(queue)
add_subdirectory(dictionary)
add_subdirectory(binaryTree)
add_subdirectory(maxPriorityQueue)
